--- a/src/app/user/registration/registration.component.html
+++ b/src/app/user/registration/registration.component.html
@@ -9,36 +9,79 @@
         <p class="divider-text">
             <span class="bg-light">OR</span>
         </p>
-        <form>
-        <div class="form-group input-group">
-            <div class="input-group-prepend">
-                <span class="input-group-text"> <i class="fa fa-user"></i> </span>
-             </div>
-            <input name="" class="form-control" placeholder="User name" type="text">
-        </div> <!-- form-group// -->
-        <div class="form-group input-group">
-            <div class="input-group-prepend">
-                <span class="input-group-text"> <i class="fa fa-envelope"></i> </span>
-             </div>
-            <input name="" class="form-control" placeholder="Email address" type="email">
-        </div> <!-- form-group// -->
-        <div class="form-group input-group">
-            <div class="input-group-prepend">
-                <span class="input-group-text"> <i class="fa fa-lock"></i> </span>
+        <form [formGroup]="sevrice.form" (submit)="onSubmit()">
+            <div>
+                <div class="form-group input-group">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text"> <i class="fa fa-user"></i> </span>
+                    </div>
+                    <input formControlName="userName" class="form-control" placeholder="User name" type="text">
+                </div>
+                <div>
+                    <label class="text-danger"
+                        *ngIf="sevrice.form.get('userName').touched && sevrice.form.get('userName').errors?.required">
+                        This field is mandatory
+                    </label>
+                </div>
             </div>
-            <input class="form-control" placeholder="Create password" type="password">
-        </div> <!-- form-group// -->
-        <div class="form-group input-group">
-            <div class="input-group-prepend">
-                <span class="input-group-text"> <i class="fa fa-lock"></i> </span>
+            <!-- form-group// -->
+            <div>
+                <div class="form-group input-group">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text"> <i class="fa fa-envelope"></i> </span>
+                    </div>
+                    <input formControlName="email" class="form-control" placeholder="Email address" type="email">
+                </div>
+                <div>
+                    <label class="text-danger"
+                        *ngIf="sevrice.form.get('email').touched && sevrice.form.get('email').errors?.email">
+                        Invalid email
+                    </label>
+                </div>
+                <!-- form-group// -->
+                <div>
+                    <div class="form-group input-group">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text"> <i class="fa fa-lock"></i> </span>
+                        </div>
+                        <input formControlName="password" class="form-control" placeholder="Create password"
+                            type="password">
+                    </div>
+                    <div>
+                        <label class="text-danger"
+                            *ngIf="sevrice.form.get('password').touched && sevrice.form.get('password').errors?.minlength">
+                            Minimum 6 characters required
+                        </label>
+                        <label class="text-danger"
+                            *ngIf="sevrice.form.get('password').touched && sevrice.form.get('password').errors?.required">
+                            Minimum 6 characters required
+                        </label>
+                    </div>
+                </div>
+                <!-- form-group// -->
+                <div class="form-group input-group">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text"> <i class="fa fa-lock"></i> </span>
+                    </div>
+                    <input formControlName="confirmPassword" class="form-control" placeholder="Repeat password"
+                        type="password">
+                </div>
+                <label class="text-danger"
+                    *ngIf="sevrice.form.get('confirmPassword').touched && sevrice.form.get('confirmPassword').errors?.required">
+                    Confirm Password not equel password
+                </label>
+                <!-- label for confirm password TODO: fix -->
+                <!-- <label class="text-danger"
+                    *ngIf="sevrice.form.get('confirmPassword').touched && sevrice.form.get('confirmPassword').errors?.>
+                    Confirm Password not equel password
+                </label> -->
             </div>
-            <input class="form-control" placeholder="Repeat password" type="password">
-        </div> <!-- form-group// -->                                      
-        <div class="form-group">
-            <button type="submit" class="btn btn-primary btn-block"> Create Account  </button>
-        </div> <!-- form-group// -->      
-        <p class="text-center">Have an account? <a href="user/login">Log In</a> </p>                                                                 
-    </form>
+            <!-- form-group// -->
+            <div class="form-group">
+                <button type="submit" class="btn btn-primary btn-block"> Create Account </button>
+            </div> <!-- form-group// -->
+            <p class="text-center">Have an account? <a href="user/login">Log In</a> </p>
+        </form>
     </article>
-    </div> <!-- card.// -->
-    <!--container end.//-->
+</div> <!-- card.// -->
+<!--container end.//-->
