setup registration component

--- a/src/app/user/registration/registration.component.html
+++ b/src/app/user/registration/registration.component.html
@@ -45,7 +45,10 @@
                             <span class="input-group-text"> <i class="fa fa-lock"></i> </span>
                         </div>
                         <input formControlName="password" class="form-control" placeholder="Create password"
-                            type="password">
+                            type="password" aria-describedby="passwordHelpBlock">
+                            <small id="passwordHelpBlock" class="form-text text-muted">
+                                Your password must be 6-10 characters long, contain letters and numbers
+                              </small>
                     </div>
                     <div>
                         <label class="text-danger"
@@ -78,7 +81,8 @@
             </div>
             <!-- form-group// -->
             <div class="form-group">
-                <button type="submit" class="btn btn-primary btn-block"> Create Account </button>
+                <button [disabled]="!sevrice.form.valid" type="submit" class="btn btn-primary btn-block"> Create Account
+                </button>
             </div> <!-- form-group// -->
             <p class="text-center">Have an account? <a href="user/login">Log In</a> </p>
         </form>
