add guard and setup routing

--- a/src/app/user/login/login.component.html
+++ b/src/app/user/login/login.component.html
@@ -2,7 +2,7 @@
     <article class="card-body mx-auto">
         <h4 class="card-title mt-3 text-center">Login</h4>
         <p class="text-center">Enter your username and password to for logs</p>
-        <form #form='ngForm' (submit)="onSubmit()">
+        <form #form='ngForm' (submit)="onSubmit(form)">
             <div>
                 <div class="form-group input-group">
                     <div class="input-group-prepend">
