--- a/src/app/user/login/login.component.html
+++ b/src/app/user/login/login.component.html
@@ -26,5 +26,8 @@
                 <button [disabled]="form.invalid" type="submit" class="btn btn-primary btn-block"> login </button>
             </div>
         </form>
+        <div>
+            <p class="text-center">You don't have an account? <a href="user/registr">Registration</a> </p>
+        </div>
     </article>
 </div>
