--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -1,22 +1,23 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="/home">Home</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-  
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="/product">Products<span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Contacts</a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link" href="#">News</a>
-        </li>
-      </ul>
-      <button *ngIf="flag" class="btn btn-danger" (click)="onloguot()">Loguot</button>
-      <button *ngIf="!flag" class="btn btn-success" (click)="onLogin()">Login</button>
-    </div>
-  </nav>
+  <a class="navbar-brand" href="/home">Home</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="/product">Products</a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Contacts</a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link" href="/news">News</a>
+      </li>
+    </ul>
+    <button *ngIf="flag" class="btn btn-danger" (click)="onloguot()">Loguot</button>
+    <button *ngIf="!flag" class="btn btn-success" (click)="onLogin()">Login</button>
+  </div>
+</nav>
