add back to top button

--- a/src/app/news/news.component.html
+++ b/src/app/news/news.component.html
@@ -13,5 +13,6 @@
                 </span>
             </div>
         </div>
+        <button *ngIf="isShow" id="UpBtn" class="btn btn-danger" (click)="gotoTop()">Back to top</button>
     </div>
 </div>
