content footer and navbar

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,103 @@
-<app-carousel></app-carousel>
-
 <h1>Home components</h1>
+<app-carousel></app-carousel>
+<div class="page-section pt-110-b-60-cont">
+    <div class="container">
+        <div class="mb-50">
+            <h1 class="section-title2 pr-0"><strong>Последние новости</strong>
+                <a href="/media/news"
+                    class="section-more right">Все новости</a></h1>
+            <div class="line-3-75"></div>
+        </div>
+        <div class="row">
+            <div class="col-md-12 wow fadeIn pb-30" style="visibility: visible; animation-name: fadeIn;">
+                <div class="row">
+                    <div class="col-md-4 blog2-post-title-cont">
+                        <div class="post-prev-date-cont"><span class="blog2-date-numb">24</span><span
+                                class="blog2-month">марта</span></div>
+                        <div class="post-prev-title">
+                            <h3><a href="/media/news/2021/03/24/maz-vypustil-tokeny-na-platforme-finstoreby">МАЗ
+                                    ВЫПУСТИЛ ТОКЕНЫ НА ПЛАТФОРМЕ FINSTORE.BY</a></h3>
+                        </div>
+                    </div>
+                    <div class="col-md-8">
+                        <div class="blog2-post-prev-text text-justify">ОАО «МАЗ» - управляющая компания холдинга
+                            «БЕЛАВТОМАЗ» (далее – ОАО «МАЗ») 23 марта 2021 эмитировало токены «МАЗ-СПОРТАВТО» на
+                            криптоплатформе Finstore.by, входящей в холдинг банка ОАО «Банк «БелВЭБ» дочерней
+                            компании&nbsp; ООО «ДФС», с целью&nbsp;повышения&nbsp;внимания к спортивной команде и
+                            альтернативного привлечения&nbsp;инвесторов.
+
+                            Спортивная команда «МАЗ-СПОРТавто» является визитной карточкой по автоспорту Общества с 2010
+                            года - года основания команды....</div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-12 wow fadeIn pb-30" style="visibility: visible; animation-name: fadeIn;">
+                <div class="row">
+                    <div class="col-md-4 blog2-post-title-cont">
+                        <div class="post-prev-date-cont"><span class="blog2-date-numb">24</span><span
+                                class="blog2-month">марта</span></div>
+                        <div class="post-prev-title">
+                            <h3><a href="/media/news/2021/03/24/aleksej-talaj-na-minskom-avtomobilnom-zavode">АЛЕКСЕЙ
+                                    ТАЛАЙ НА МИНСКОМ АВТОМОБИЛЬНОМ ЗАВОДЕ</a></h3>
+                        </div>
+                    </div>
+                    <div class="col-md-8">
+                        <div class="blog2-post-prev-text text-justify">24 марта Минский автомобильный завод посетил член
+                            Конституционной комиссии, спортсмен-паралимпиец, общественный деятель и мотивационный тренер
+                            Алексей Талай. Визит состоялся по инициативе генерального директора предприятия Валерия
+                            Иванковича.&nbsp;
+
+
+                            Алексей Талай - рекордсмен мира и Европы по плаванию, многократный чемпион Беларуси,
+                            основатель проекта "Спортсмены Беларуси - сила в единстве". Он на собственном примере
+                            доказал, что человек благодаря силе...</div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-12 wow fadeIn pb-30" style="visibility: visible; animation-name: fadeIn;">
+                <div class="row">
+                    <div class="col-md-4 blog2-post-title-cont">
+                        <div class="post-prev-date-cont"><span class="blog2-date-numb">19</span><span
+                                class="blog2-month">марта</span></div>
+                        <div class="post-prev-title">
+                            <h3><a
+                                    href="/media/news/2021/03/19/pravitelstvennaa-delegacia-respubliki-belarus-posetila-pao-kamaz">ПРАВИТЕЛЬСТВЕННАЯ
+                                    ДЕЛЕГАЦИЯ РЕСПУБЛИКИ БЕЛАРУСЬ ПОСЕТИЛА ПАО «КАМАЗ»</a></h3>
+                        </div>
+                    </div>
+                    <div class="col-md-8">
+                        <div class="blog2-post-prev-text text-justify">Генеральный директор ОАО "МАЗ" - управляющая
+                            компания холдинга "БЕЛАВТОМАЗ" Валерий Иванкович в составе официальной делегации
+                            представителей белорусских промышленных предприятий во главе с Министром промышленности
+                            Республики Беларусь Петром Пархомчиком посетил ПАО «КАМАЗ» в Республике Татарстан.
+
+                            В ходе визита члены делегации вместе&nbsp; с Министром промышленности и торговли Республики
+                            Татарстан Альбертом Каримовым, генеральным директором ПАО «КАМАЗ» Сергеем&nbsp; Когогиным...
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-12 wow fadeIn pb-30" style="visibility: visible; animation-name: fadeIn;">
+                <div class="row">
+                    <div class="col-md-4 blog2-post-title-cont">
+                        <div class="post-prev-date-cont"><span class="blog2-date-numb">18</span><span
+                                class="blog2-month">марта</span></div>
+                        <div class="post-prev-title">
+                            <h3><a href="/media/news/2021/03/18/strategiceskij-partner-maza-kompania-dana-holdings">
+                                    СТРАТЕГИЧЕСКИЙ ПАРТНЕР МАЗа - КОМПАНИЯ DANA HOLDINGS</a></h3>
+                        </div>
+                    </div>
+                    <div class="col-md-8">
+                        <div class="blog2-post-prev-text text-justify">На Международной строительной выставке
+                            BUDEXPO-2021, которая по 20 марта проводится &nbsp;в Минске, прошла встреча первого
+                            заместителя коммерческого директора ОАО «МАЗ» – управляющая компания холдинга «БЕЛАВТОМАЗ»
+                            Бориса Мущинского с Председателем совета &nbsp;директоров Dana Holdings Вибором Муличем.
+
+                            Минский автомобильный завод и Dana Holdings связывает давнее взаимовыгодное сотрудничество.
+                            Предприятия являются стратегическими партнёрами и более 2 лет реализуют совместные...</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
