--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -1,72 +1,111 @@
 <!-- Footer -->
 <footer class="bg-light text-center text-lg-start">
-    <!-- Grid container -->
-    <div class="container p-4">
-      <!--Grid row-->
-      <div class="row">
-        <!--Grid column-->
-        <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
-          <h5 class="text-uppercase">Footer Content</h5>
-  
+  <!-- Grid container -->
+  <div class="container p-4">
+    <!--Grid row-->
+    <div class="row">
+      <!--Grid column-->
+      <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
+        <img src="../../../assets/images/logo1.png" alt="Логотип ГМЗ">
+        <h5 class="text-uppercase">Гродненский Механический Завод</h5>
+        <p>
+          230003, Гродно
+          ул. Карского, 20
+        </p>
+        <p>
+          Справочная служба:
+          +375 (152) 77-02-00
+        </p>
+        <h6>
           <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste atque ea quis
-            molestias. Fugiat pariatur maxime quis culpa corporis vitae repudiandae aliquam
-            voluptatem veniam, est atque cumque eum delectus sint!
+            Время работы: с 8.30 до 17.00
+          </p>
+        </h6>
+        <p>
+          E-mail:
+          gmz@gmz.by
+        </p>
+      </div>
+      <!--Grid column-->
+
+      <!--Grid column-->
+      <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+        <h5 class="text-uppercase">ПРОДУКЦИЯ</h5>
+
+        <ul class="list-unstyled mb-0">
+          <li>
+            <a href="#!" class="text-dark">Автоцистерны для пищевых продуктов</a>
+          </li>
+          <li>
+            <a href="#!" class="text-dark">Автоцистерны для нефтепродуктов</a>
+          </li>
+          <li>
+            <a href="#!" class="text-dark">Автоцистерны для СУГ</a>
+          </li>
+          <li>
+            <a href="#!" class="text-dark">Автоцистерны для работ нефтедобывающих предприятий</a>
+          </li>
+          <li>
+            <a href="#!" class="text-dark">Контейнер-цистерны для перевозки агрессивных жидкостей</a>
+          </li>
+          <li>
+            <a href="#!" class="text-dark">Спецтехника на базе БелАЗ</a>
+          </li>
+          <li>
+            <a href="#!" class="text-dark">КАЗС-3</a>
+          </li>
+          <li>
+            <a href="#!" class="text-dark">Флувис</a>
+          </li>
+          <li>
+            <a href="#!" class="text-dark">Потребительские товары</a>
+          </li>
+        </ul>
+      </div>
+      <!--Grid column-->
+
+      <!--Grid column-->
+      <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+        <h5 class="text-uppercase mb-0">КАРТА САЙТА</h5>
+
+        <ul class="list-unstyled">
+          <li>
+            <a href="#!" class="text-dark">Главная</a>
+          </li>
+          <li>
+            <a href="#!" class="text-dark">Продукция</a>
+          </li>
+          <li>
+            <a href="#!" class="text-dark">Контакты</a>
+          </li>
+          <li>
+            <a href="#!" class="text-dark">О предприятии</a>
+          </li>
+          <li>
+            <a href="#!" class="text-dark">Новости</a>
+          </li>
+        </ul>
+        <h5 class="text-uppercase mb-0">АВТОРСКИЕ ПРАВА</h5>
+        <div class="container">
+          <br>
+          <p>
+            Все права защищены
+          </p>
+          <p>
+            ОАО "ГМЗ" © 2021
           </p>
         </div>
-        <!--Grid column-->
-  
-        <!--Grid column-->
-        <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-          <h5 class="text-uppercase">Links</h5>
-  
-          <ul class="list-unstyled mb-0">
-            <li>
-              <a href="#!" class="text-dark">Link 1</a>
-            </li>
-            <li>
-              <a href="#!" class="text-dark">Link 2</a>
-            </li>
-            <li>
-              <a href="#!" class="text-dark">Link 3</a>
-            </li>
-            <li>
-              <a href="#!" class="text-dark">Link 4</a>
-            </li>
-          </ul>
-        </div>
-        <!--Grid column-->
-  
-        <!--Grid column-->
-        <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-          <h5 class="text-uppercase mb-0">Links</h5>
-  
-          <ul class="list-unstyled">
-            <li>
-              <a href="#!" class="text-dark">Link 1</a>
-            </li>
-            <li>
-              <a href="#!" class="text-dark">Link 2</a>
-            </li>
-            <li>
-              <a href="#!" class="text-dark">Link 3</a>
-            </li>
-            <li>
-              <a href="#!" class="text-dark">Link 4</a>
-            </li>
-          </ul>
-        </div>
-        <!--Grid column-->
       </div>
-      <!--Grid row-->
+      <!--Grid column-->
     </div>
-    <!-- Grid container -->
-  
-    <!-- Copyright -->
-    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
-      © 2020 Copyright:
-      <a class="text-dark" href="https://mdbootstrap.com/">MDBootstrap.com</a>
-    </div>
-    <!-- Copyright -->
-  </footer>
-  <!-- Footer -->
+    <!--Grid row-->
+  </div>
+  <!-- Grid container -->
+
+  <!-- Copyright -->
+  <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
+    <a class="text-dark" href="/home"><h6>© Гродненский Механический Завод, 2021</h6></a>
+  </div>
+  <!-- Copyright -->
+</footer>
+<!-- Footer -->
