--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -24,10 +24,10 @@
           <a class="nav-link active" href="/product">Продукция</a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="#">Контакты</a>
+          <a class="nav-link" href="/contact">Контакты</a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="#">О предприятии</a>
+          <a class="nav-link" href="/history">О предприятии</a>
         </li>
         <li class="nav-item active">
           <a class="nav-link" href="/news">Новости</a>
