--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,103 +1,75 @@
-<h1>Home components</h1>
+<!-- <h1>Home components</h1> -->
 <app-carousel></app-carousel>
-<div class="page-section pt-110-b-60-cont">
-    <div class="container">
-        <div class="mb-50">
-            <h1 class="section-title2 pr-0"><strong>Последние новости</strong>
-                <a href="/media/news"
-                    class="section-more right">Все новости</a></h1>
-            <div class="line-3-75"></div>
-        </div>
-        <div class="row">
-            <div class="col-md-12 wow fadeIn pb-30" style="visibility: visible; animation-name: fadeIn;">
-                <div class="row">
-                    <div class="col-md-4 blog2-post-title-cont">
-                        <div class="post-prev-date-cont"><span class="blog2-date-numb">24</span><span
-                                class="blog2-month">марта</span></div>
-                        <div class="post-prev-title">
-                            <h3><a href="/media/news/2021/03/24/maz-vypustil-tokeny-na-platforme-finstoreby">МАЗ
-                                    ВЫПУСТИЛ ТОКЕНЫ НА ПЛАТФОРМЕ FINSTORE.BY</a></h3>
-                        </div>
-                    </div>
-                    <div class="col-md-8">
-                        <div class="blog2-post-prev-text text-justify">ОАО «МАЗ» - управляющая компания холдинга
-                            «БЕЛАВТОМАЗ» (далее – ОАО «МАЗ») 23 марта 2021 эмитировало токены «МАЗ-СПОРТАВТО» на
-                            криптоплатформе Finstore.by, входящей в холдинг банка ОАО «Банк «БелВЭБ» дочерней
-                            компании&nbsp; ООО «ДФС», с целью&nbsp;повышения&nbsp;внимания к спортивной команде и
-                            альтернативного привлечения&nbsp;инвесторов.
 
-                            Спортивная команда «МАЗ-СПОРТавто» является визитной карточкой по автоспорту Общества с 2010
-                            года - года основания команды....</div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-12 wow fadeIn pb-30" style="visibility: visible; animation-name: fadeIn;">
-                <div class="row">
-                    <div class="col-md-4 blog2-post-title-cont">
-                        <div class="post-prev-date-cont"><span class="blog2-date-numb">24</span><span
-                                class="blog2-month">марта</span></div>
-                        <div class="post-prev-title">
-                            <h3><a href="/media/news/2021/03/24/aleksej-talaj-na-minskom-avtomobilnom-zavode">АЛЕКСЕЙ
-                                    ТАЛАЙ НА МИНСКОМ АВТОМОБИЛЬНОМ ЗАВОДЕ</a></h3>
-                        </div>
-                    </div>
-                    <div class="col-md-8">
-                        <div class="blog2-post-prev-text text-justify">24 марта Минский автомобильный завод посетил член
-                            Конституционной комиссии, спортсмен-паралимпиец, общественный деятель и мотивационный тренер
-                            Алексей Талай. Визит состоялся по инициативе генерального директора предприятия Валерия
-                            Иванковича.&nbsp;
+<div class="container">
 
-
-                            Алексей Талай - рекордсмен мира и Европы по плаванию, многократный чемпион Беларуси,
-                            основатель проекта "Спортсмены Беларуси - сила в единстве". Он на собственном примере
-                            доказал, что человек благодаря силе...</div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-12 wow fadeIn pb-30" style="visibility: visible; animation-name: fadeIn;">
-                <div class="row">
-                    <div class="col-md-4 blog2-post-title-cont">
-                        <div class="post-prev-date-cont"><span class="blog2-date-numb">19</span><span
-                                class="blog2-month">марта</span></div>
-                        <div class="post-prev-title">
-                            <h3><a
-                                    href="/media/news/2021/03/19/pravitelstvennaa-delegacia-respubliki-belarus-posetila-pao-kamaz">ПРАВИТЕЛЬСТВЕННАЯ
-                                    ДЕЛЕГАЦИЯ РЕСПУБЛИКИ БЕЛАРУСЬ ПОСЕТИЛА ПАО «КАМАЗ»</a></h3>
-                        </div>
-                    </div>
-                    <div class="col-md-8">
-                        <div class="blog2-post-prev-text text-justify">Генеральный директор ОАО "МАЗ" - управляющая
-                            компания холдинга "БЕЛАВТОМАЗ" Валерий Иванкович в составе официальной делегации
-                            представителей белорусских промышленных предприятий во главе с Министром промышленности
-                            Республики Беларусь Петром Пархомчиком посетил ПАО «КАМАЗ» в Республике Татарстан.
-
-                            В ходе визита члены делегации вместе&nbsp; с Министром промышленности и торговли Республики
-                            Татарстан Альбертом Каримовым, генеральным директором ПАО «КАМАЗ» Сергеем&nbsp; Когогиным...
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-12 wow fadeIn pb-30" style="visibility: visible; animation-name: fadeIn;">
-                <div class="row">
-                    <div class="col-md-4 blog2-post-title-cont">
-                        <div class="post-prev-date-cont"><span class="blog2-date-numb">18</span><span
-                                class="blog2-month">марта</span></div>
-                        <div class="post-prev-title">
-                            <h3><a href="/media/news/2021/03/18/strategiceskij-partner-maza-kompania-dana-holdings">
-                                    СТРАТЕГИЧЕСКИЙ ПАРТНЕР МАЗа - КОМПАНИЯ DANA HOLDINGS</a></h3>
-                        </div>
-                    </div>
-                    <div class="col-md-8">
-                        <div class="blog2-post-prev-text text-justify">На Международной строительной выставке
-                            BUDEXPO-2021, которая по 20 марта проводится &nbsp;в Минске, прошла встреча первого
-                            заместителя коммерческого директора ОАО «МАЗ» – управляющая компания холдинга «БЕЛАВТОМАЗ»
-                            Бориса Мущинского с Председателем совета &nbsp;директоров Dana Holdings Вибором Муличем.
-
-                            Минский автомобильный завод и Dana Holdings связывает давнее взаимовыгодное сотрудничество.
-                            Предприятия являются стратегическими партнёрами и более 2 лет реализуют совместные...</div>
-                    </div>
-                </div>
-            </div>
+    <div class="mb-50">
+        <h1 class="section-title2 pr-0">
+            <strong>Последние новости</strong>
+            <a href="/news" class="section-more right">Все новости</a>
+        </h1>
+        <div class="line-3-75">
         </div>
     </div>
-</div>
+
+    <div class="row">
+        <div class="col-10">
+            <a href="/">
+                <h5><strong>Заголовок новости новости новости новости новости новости новостиновости новости новости
+                        новости </strong></h5>
+            </a>
+        </div>
+        <div class="col-2">
+            <span>
+                <strong>Дата публикации</strong>
+                <h6>21-09-2021</h6>
+            </span>
+        </div>
+        <div class="col-10">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore eligendi architecto, ab doloribus
+                aspernatur doloremque soluta rem? Nihil praesentium, dignissimos cupiditate, aspernatur officiis eum
+                reiciendis repellat tempora optio nesciunt, soluta omnis odit fugit natus quas placeat perspiciatis
+                doloribus. Reprehenderit iure ab est earum natus aliquam ex obcaecati quam eaque beatae?</p>
+        </div>
+    </div>
+    <div class="mb-50">
+        <h1 class="section-title2 pr-0">
+            <strong>Реквизиты предприятия</strong>
+            <a href="/contact" class="section-more right">Все контакты</a>
+        </h1>
+        <div class="line-3-75">
+        </div>
+        <div class="container">
+            <div class="row">
+                <h5>ОАО "Гродненский механический завод"</h5>
+            </div>
+            <div class="row">
+                <p><strong>Расчетный счет:</strong>
+                
+                    BY95SLAN30123385400280000000 ЗАО Банк ВТБ (Беларусь)</p>
+                    <span>
+                        <p> г. Минск код SLANBY22
+                            УНН 500013376 ОКПО 05808215</p>
+                    </span>
+            </div>
+            <div class="row">
+                <p><strong>Адрес:</strong> РБ, Гродно, Карского 20, 230003</p>
+            </div>
+            <div class="row">
+                <p><strong>Телефон:</strong> +375(152)71-99-00</p>
+            </div>
+            <div class="row">
+                <p><strong>Факс:</strong> +375(152)71-99-00</p>
+            </div>
+            <div class="row">
+                <p><strong>Email:</strong> gmz@gmz.by</p>
+            </div>
+        </div>
+        <div class="mb-50">
+            <h1 class="section-title2 pr-0">
+                <strong>Актуальные вакансии</strong>
+                <a href="/contact" class="section-more right">Все ваканьсии</a>
+            </h1>
+            <div class="line-3-75">
+            </div>
+        </div>
