--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -70,19 +70,19 @@
 
         <ul class="list-unstyled">
           <li>
-            <a href="#!" class="text-dark">Главная</a>
+            <a href="/" class="text-dark">Главная</a>
           </li>
           <li>
-            <a href="#!" class="text-dark">Продукция</a>
+            <a href="/product" class="text-dark">Продукция</a>
           </li>
           <li>
-            <a href="#!" class="text-dark">Контакты</a>
+            <a href="/contact" class="text-dark">Контакты</a>
           </li>
           <li>
-            <a href="#!" class="text-dark">О предприятии</a>
+            <a href="/history" class="text-dark">О предприятии</a>
           </li>
           <li>
-            <a href="#!" class="text-dark">Новости</a>
+            <a href="/news" class="text-dark">Новости</a>
           </li>
         </ul>
         <h5 class="text-uppercase mb-0">АВТОРСКИЕ ПРАВА</h5>
