add notFound page and add content in contacnt component

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -68,8 +68,13 @@
         <div class="mb-50">
             <h1 class="section-title2 pr-0">
                 <strong>Актуальные вакансии</strong>
-                <a href="/contact" class="section-more right">Все ваканьсии</a>
+                <a href="/contact" class="section-more right">Все вакансии</a>
             </h1>
             <div class="line-3-75">
             </div>
+        </div>
+        <div>
+            <h3>
+                Здесь будут вакансии на работу !
+            </h3>
         </div>
