--- a/src/app/layout/navbar/navbar.component.css
+++ b/src/app/layout/navbar/navbar.component.css
@@ -7,6 +7,11 @@
 .header .container-m-30 {
     position: relative;
 }
+#login_btn{
+    position: absolute;
+    right: 15px;
+    cursor: pointer;
+}
 .row, .clearfix {
     zoom: 1;
 }
@@ -31,7 +36,7 @@
 .topnav a:hover {
     border-bottom: 3px solid gray;
 }
-.container-m-31{
+.container-m-30{
     position: relative;
 }
 .logo-2 {
