--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,3 @@
-<!-- <h1>Home components</h1> -->
 <app-carousel></app-carousel>
 
 <div class="container">
@@ -30,7 +29,7 @@
         </div>
         <div class="col-10">
             <p>
-                {{news.body}}
+                {{news.shortDescription}}
             </p>
         </div>
     </div>
