--- a/src/app/news/news.component.html
+++ b/src/app/news/news.component.html
@@ -57,4 +57,4 @@
         </div>
     </div>
 </div>
-<button *ngIf="isShow" id="UpBtn" class="btn btn-danger" (click)="gotoTop()">Back to top</button>
+<img *ngIf="isShow" id="UpArrow" src="../../assets/images/gototop/up-arrow.png" (click)="gotoTop()">
