--- a/src/styles.css
+++ b/src/styles.css
@@ -18,3 +18,12 @@ h1,h2,h3,h4,h5,h6{
 .mb-50 {
     margin-bottom: 50px !important;
 }
+#UpArrow{
+    position: fixed;
+    bottom: 20px;
+    right: 5px;
+    font-size: 20px;
+    text-align: center;
+    border-radius: 10px;
+    outline: none;
+  }
