--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -210,3 +210,4 @@
                 </div>
             </div>
         </div>
+        <img *ngIf="isShow" id="UpArrow" src="../../assets/images/gototop/up-arrow.png" (click)="gotoTop()">
