add admin-guard and admin service

--- a/src/app/user-profile/user-profile.component.html
+++ b/src/app/user-profile/user-profile.component.html
@@ -15,5 +15,6 @@
         </div>
         </div>
     </div>
+    <a href="/admin"> Admin</a>
     <button class="btn-primary" (click)="onlogout()">Loguot</button>
 </div>
