start product page

--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -1,7 +1,16 @@
-<div class="row">
-    <div class="col">
-    </div>
-    <div class="col-md-10">
-        <h1>Product</h1>
+<div class="container">
+    <div class="row">
+        <div class="col-4">
+            <div class="container">
+                <p>Тавар 1</p>
+                <p>Тавар 2</p>
+                <p>Тавар 3</p>
+                <p>Тавар 4</p>
+                <p>Тавар 5</p>
+            </div>
+        </div>
+        <div class="col-8">
+            
+        </div>
     </div>
 </div>
